<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textAppearance="?android:attr/textAppearanceMedium" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/deviceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" android:text="@string/device" android:layout_gravity="center_horizontal" android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/modVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versionText" android:layout_marginTop="5dp" android:layout_gravity="center_horizontal" android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" android:hint="@string/description" android:layout_gravity="center_horizontal" android:layout_marginTop="20dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" android:layout_gravity="center_horizontal" android:layout_marginTop="25dp"/>

</LinearLayout>